# ai-trading-indicators

./: .gitignore  PRD-V1.md  PROMPT-V1.txt  README.md  pyproject.chatgpt  pyproject.claudeai  pyproject.gemini  pyproject.toml
DATA/: AAPL.csv
ind/: __init__.py  cli.py  processor-v1.py  processor-v2.py  processor-v3.py  processor-v4.py  processor-v5.py  processor-v6.py  processor.py  ta_lib-0.6.5-cp313-cp313-win_amd64.whl
ind_gemini/: __init__.py  __main__.py  cli.py  core.py
src/ind/: __main__.py  io.py  processor.py
src_chatgpt/ind/: cli.py  config.py  py.typed  types.py
tmp/: projectstructure-chatgpt.txt  projectstructure-claude.txt  projectstructure-gemini.txt  projectstructure-grok.txt
