[project]
name = "indicators"
version = "0.1.0"
description = "A Python library for processing financial time-series data and generating technical indicators using TA-Lib"
authors = [
    {name = "Robert Boivin", email = "poivronjaune@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "ta-lib>=0.6.4"
]

[project.scripts]
indicators = "ind.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-trading-indicators"
"Source" = "https://github.com/yourusername/ai-trading-indicators"
"Tracker" = "https://github.com/yourusername/ai-trading-indicators/issues"

[tool.setuptools]
packages = ["ind"]